--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --octal-bin-family: 'Silkscreen', cursive;
     --fontPag-padrao: 'Orbitron', sans-serif;
     --botao: hsla(0, 0%, 90%, 0.8);
-    --corFundo: -webkit-linear-gradient(right, hsla(10, 50%, 30%, 1) , hsla(15, 70%, 45%, 1), hsla(60, 70%, 45%, 1));
+    --corFundo: -webkit-linear-gradient(right, hsla(0, 88%, 88%, 0) , hsla(0, 88%, 88%, 0.2), hsla(0, 100%, 100%, 0.4));
     font-family: var(--fontPag-padrao);
 }
 
@@ -16,13 +16,58 @@ body {
 .cabecalho {
     display: flex;
     width: 100%;
+    height: 35vh;
+    color: hsla(0, 50%, 100%, 0.8);
     background-image: var(--corFundo);
 }
 
 .principal {
     display: flex;
-    flex-direction: column;
     background-image: var(--corFundo);
+    border: 2px solid #444;
+}
+
+.curiosidades {
+    width: 25%;
+    padding: 15px;
+    color: whitesmoke;
+    background-color: black;
+    border: 2px solid #444;
+}
+
+.figureAside {
+    border: 1px whitesmoke solid;
+    display: flex;
+    flex-direction: column;
+}
+.imgAside {
+    width: 100%;
+}
+
+.legendaImg {
+    text-align: center;
+    background-color: hsla(0, 88%, 88%, 0.2);
+    color: whitesmoke;
+    font-size: 0.8rem;
+    padding: 5px;
+}
+
+.legendaImg:hover {
+    background-color: hsla(0, 88%, 88%, 0);;
+}
+
+.paragAside {
+    padding: 1rem 1.2rem 1rem .5rem;
+    line-height: 1.7rem;
+    text-align:justify
+}
+
+
+
+.secaoPrincipal {
+    background-color: #222;
+    border: 2px solid #444;
+    width: 75%;
 }
 
 .titulo{
@@ -47,7 +92,8 @@ body {
 .menu{
     margin-top: 1rem;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    margin: 10px 0 20px 30px;
     height: 12vh;
 }
 
@@ -61,12 +107,12 @@ body {
 }
 
 .bin {
-    width: 19.6%;
+    width: 31%;
     margin-right: 10px;
 }
 
 .octal {
-    width: 19.6%;
+    width: 31%;
 }
 
 .botao:hover {
@@ -79,18 +125,16 @@ body {
 .conversores {
     display: flex;
     width: 100%;
-    margin-top: 20px;
-    justify-content: center;
-    padding-bottom: 10px;
+    margin: 20px 0 10px 30px;
+    justify-content: flex-start;
 }
 
 .form {
     display: flex;
-    align-items: center;
     background-color: var(--botao);
     flex-direction: column;
     padding: 1rem 2rem 2rem 2rem;
-    width: 40%;
+    width: 61%;
     border-radius: 15px;
     border-top: 10px solid limegreen;;
 }
@@ -138,12 +182,26 @@ body {
 }
 
 .rodape {
+    display: flex;
+    justify-content: center;
     width: 100%;
     background-color: black;
 }
 
 .rodapeTexto {
+    padding: 2rem 0 2rem 0;
     color: whitesmoke;
-    line-height: 5rem;
+    line-height: 3rem;
     text-align: center;
+}
+
+.descricaoRodape {
+    font-size: 1.5rem;
+    color: limegreen;
+}
+
+.mail {
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: limegreen;
 }
