--- a/style.css
+++ b/style.css
@@ -15,20 +15,37 @@ body {
 
 .cabecalho {
     display: flex;
-    width: 100%;
-    height: 35vh;
+    width: 100vw;
+    height: 25vh;
     color: hsla(0, 50%, 100%, 0.8);
     background-image: var(--corFundo);
 }
 
+.titulo{
+    font-size: 1rem;
+    text-align: center;
+    padding: .5rem;
+}
+
+.subtitulo {
+    font-size: 1rem;
+    text-align: center;
+    padding: 0 ;
+}
+
+.oitoBits {
+    font-family: var(--octal-bin-family);
+    font-size: 1rem;
+}
+
 .principal {
     display: flex;
+    flex-direction: column;
     background-image: var(--corFundo);
     border: 2px solid #444;
 }
 
 .curiosidades {
-    width: 25%;
     padding: 15px;
     color: whitesmoke;
     background-color: black;
@@ -67,34 +84,15 @@ body {
 .secaoPrincipal {
     background-color: #222;
     border: 2px solid #444;
-    width: 75%;
-}
-
-.titulo{
-    font-size: 3rem;
-    text-align: center;
-    padding: 2rem;
-}
-
-.subtitulo {
-    text-align: center;
-}
-
-.primario {
     width: 100%;
 }
 
-.oitoBits {
-    font-family: var(--octal-bin-family);
-    font-size: 2rem;
-}
-
 .menu{
-    margin-top: 1rem;
     display: flex;
-    justify-content: flex-start;
-    margin: 10px 0 20px 30px;
-    height: 12vh;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px 30px 20px 30px;
+    /* height: 12vh; */
 }
 
 .botao {
@@ -107,12 +105,14 @@ body {
 }
 
 .bin {
-    width: 31%;
-    margin-right: 10px;
+    width: 100%;
+    height: 4rem;
+    margin-bottom: 10px;
 }
 
 .octal {
-    width: 31%;
+    width: 100%;
+    height: 4rem;
 }
 
 .botao:hover {
@@ -125,16 +125,16 @@ body {
 .conversores {
     display: flex;
     width: 100%;
-    margin: 20px 0 10px 30px;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .form {
     display: flex;
     background-color: var(--botao);
     flex-direction: column;
-    padding: 1rem 2rem 2rem 2rem;
-    width: 61%;
+    margin: 10px 30px 20px 30px;
+    padding: .7rem;
+    width: 100%;
     border-radius: 15px;
     border-top: 10px solid limegreen;;
 }
@@ -163,22 +163,22 @@ body {
 
 .labelConversor {
     margin-top: .5rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .inputConversor {
     font-family: var(--octal-bin-family);
     margin-top: .5rem;
-    height: 3rem;
+    height: 2.5rem;
     width: 100%;
-    font-size: 2rem;
+    font-size: 1.05rem;
 }
 
 .formButton, .converte {
     margin-top: .5rem;
     width: 100%;
-    height: 3rem;
-    font-size: 2rem;
+    height: 2.5rem;
+    font-size: 1.5rem;
 }
 
 .rodape {
@@ -196,12 +196,23 @@ body {
 }
 
 .descricaoRodape {
-    font-size: 1.5rem;
+    font-size: 1rem;
+    padding: 1rem;
     color: limegreen;
+}
+
+.endereco {
+    vertical-align: middle;
+}
+
+.icone {
+    vertical-align: middle;
+    height: 2rem;
+    width: 2rem;
 }
 
 .mail {
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: .8rem;
     color: limegreen;
 }
